--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,14 @@
 	"version"			: "1.0",
 	"description"		: "...",
 	"manifest_version"	: 2,
-	"icons"				: {"128": "app/img/icon.png"},
+	"icons"				: {"128": "icon.png"},
 	"background"		: {
-		"page"			: "app/background.html"
+		"page"			: "background/background.html"
 	},
 	// type --------------------------------------------------------------
 	"browser_action"	: {
-		"default_icon"	: "app/img/icon.png",
-		"default_popup" : "app/popup.html"
+		"default_icon"	: "icon.png",
+		"default_popup" : "popup/popup.html"
 	},
 	// page injection --------------------------------------------------------------	
 	"content_scripts"	: [{
@@ -21,13 +21,17 @@
 								"*.doc","*.docx","*.ppt","*.pptx","*.xls","*.xlsx","*.pdf","*.xml","*.txt",
 								"*.mpg","*.mpeg","*.qt","*.mp4","*.m4v","*.m4a","*.mp3","*.ogv","*.ogm","*.ogg","*.oga","*.webm","*.wav",
 								"*.","*." ],
-		"css"				: ["app/css/inject.css"],
-		"js"				: ["app/js/vendor/jquery.min.js", "app/js/contentScript.js"],
+		"css"				: ["contentScript/inject.css"],
+		"js"				: [
+								"contentScript/vendor/jquery.min.js",
+								"contentScript/composeConfig.js" ,
+								"contentScript/contentScript.js"
+							],
 		"run_at" 			: "document_end"
 	}],
 	// imports & permissions --------------------------------------------------------------	
 	"web_accessible_resources" : [ 
-		"app/*"
+		"contentScript/app/*"
 	],	
 	"permissions"		: [ 
 		"tabs",
